<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="ru.stv.socialhelper.MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avtobusbt_text"
        android:id="@+id/avtobusbt"
        android:layout_alignTop="@+id/magazbt"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magaz_text"
        android:id="@+id/magazbt"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:background="#00000000"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">



    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/avtobusbt">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr1">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv1_text"
                android:id="@+id/textView"
                android:visibility="gone"
                android:layout_column="0"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv2_text"
                android:id="@+id/textView2"
                android:visibility="gone"
                android:layout_column="2"
                android:textColor="@color/colorAccent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr2">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:id="@+id/kassaprevet"
                android:layout_column="0"
                android:visibility="gone"
                android:text="@string/all1Kassabt1_text" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allja_text"
                android:id="@+id/allja"
                android:visibility="gone"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allsorry_text"
                android:id="@+id/allsorry"
                android:visibility="gone"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr3">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/kassapreziki_text"
                android:id="@+id/kassapreziki"
                android:visibility="gone"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allnein_text"
                android:visibility="gone"
                android:id="@+id/allnein"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allposledniy_text"
                android:visibility="gone"
                android:id="@+id/allposledniy"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr4">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/kassabezdacha_text"
                android:visibility="gone"
                android:id="@+id/kassabezsdacha"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allgoodday_text"
                android:visibility="gone"
                android:id="@+id/allgoodday"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allmore_text"
                android:id="@+id/allmorebt"
                android:layout_column="2"
                android:visibility="gone" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr5">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/kassaspasibo_text"
                android:visibility="gone"
                android:id="@+id/kassasps"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allgoodevening_text"
                android:visibility="gone"
                android:id="@+id/allgoodevening"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/love_text"
                android:visibility="gone"
                android:id="@+id/Martlove"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr6">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/kassaPoka_text"
                android:id="@+id/kassapoka"
                android:layout_column="0"
                android:visibility="gone" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allzavtraTime_text"
                android:visibility="gone"
                android:id="@+id/allzavtra"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listan_text"
                android:visibility="gone"
                android:id="@+id/Martlisn"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr7">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tv3_text"
                android:visibility="gone"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:textColor="@color/colorAccent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr8">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/kassaNujen_text"
                android:visibility="gone"
                android:id="@+id/kassanujen"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/mcdak_text"
                android:visibility="gone"
                android:id="@+id/Martjob"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/cheee_text"
                android:visibility="gone"
                android:id="@+id/MartCheee"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr9">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/kassaNeNujen_text"
                android:visibility="gone"
                android:id="@+id/kassanenujen"
                android:layout_column="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/che_text"
                android:visibility="gone"
                android:id="@+id/MartChe"
                android:layout_column="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/slish_text"
                android:visibility="gone"
                android:id="@+id/MartSlish"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr10">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/AftobusSledOstan_text"
                android:id="@+id/sledostanbt"
                android:visibility="gone"
                android:layout_column="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr11">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tv4_text"
                android:visibility="gone"
                android:id="@+id/textView4"
                android:layout_column="0"
                android:textColor="@color/colorAccent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr12">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/AftobusOknoDuet_text"
                android:visibility="gone"
                android:id="@+id/coldbt"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tr13">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:text="@string/AftobusOknoJarko_text"
                android:visibility="gone"
                android:id="@+id/warmbt"
                android:layout_column="0" />
        </TableRow>

    </TableLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_text"
        android:id="@+id/rate"
        android:onClick="onClickRateThisApp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary" />

</RelativeLayout>
